--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev":"nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
